# rust

./: README.md
actixlab/src/: main.rs
actixlab/src/models/: event.rs  measurement.rs  mod.rs  register.rs
auto_task/: Cargo.toml
auto_task/src/: main.rs
demo-ffi/: Cargo.toml  demo_ffi.js
demo-ffi/src/: lib.rs
demo-json/: Cargo.toml  todo.json
demo-json/src/: from_file.rs  main.rs
demo_cmd/: Cargo.toml
demo_cmd/src/: main.rs
demo_nickel/: Cargo.toml
demo_nickel/src/: main.rs
diesel-demo/: Cargo.toml
diesel-demo/src/: main.rs  model.rs  schema.rs
gtkdemo/: Cargo.toml
gtkdemo/src/: main.rs
gtkrs/: Cargo.toml
gtkrs/src/: main.rs
hawalaq/: Cargo.toml
hawalaq/src/: task_handler.rs
hello/: add_op.rs  allow_dead_code.rs  alt_method_overload.rs  ambil.rs  and_op.rs  anom_lt.rs  anonym_func_arg.rs  anonym_func_move.rs  append_nil.rs  array.rs  array1.rs  array2.rs  array_acc.rs  array_acc_bound.rs  array_basic.rs  array_eq_ne.rs  array_loop.rs  array_minmax.rs  array_sum.rs  as_ref.rs  assert1.rs  associate_func1.rs  backup_file.rs  bagi.rs  berat.rs  berat1.rs  bil_prima.rs  book.rs  borrowing1.rs  box1.rs  break_loop.rs  bself.rs  bself_on_trait.rs  bubble_sort.rs  builder_pattern1.rs  builder_pattern2.rs  caesar_crypt.rs  cargo_clean.rs  cast.rs  cek_ecc_ugm.rs  (+317 more)
hello/challenge/: longest_subslice.rs  num_as_roman.rs
hello/fp/: hello.rs
hello/quiz/: quiz1.rs  quiz13.rs  quiz16.rs  quiz31.rs  quiz32.rs  quiz6.rs
hello_world/: main.rs
mybook/: Cargo.toml
mybook/src/: main.rs
mybook/templates/: index.html.tera
playground/: Cargo.toml
playground/src/: actixws.rs  basic.rs  cmd.rs  datetime.rs  fun.rs  main.rs  redis_pubsub.rs  shadow.rs
playground/templates/: base.html
playground/templates/users/: profile.html
todo/: Cargo.toml
todo/src/: api.rs  db.rs  main.rs  main.txt  model.rs  schema.rs  session.rs
todo/templates/: hello.html  index.html
upgrad_chat/: Cargo.toml
upgrad_chat/src/: main.rs  schema.rs
upgrad_chat/src/models/: conversation.rs  mod.rs  post.rs  user.rs
