[package]
name = "diesel-demo"
version = "0.1.0"
authors = ["Agus Susilo <smartgdi@gmail.com>"]
edition = "2018"

[dependencies]
# calamine = "0.11.7"
diesel = { version = "1.4.2", features = ["mysql", "chrono", "serde_json", "r2d2"] }
dotenv = "0.14.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"