[package]
name = "gtkdemo"
version = "0.1.0"
authors = ["susilo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pangocairo = "0.9.0"

[dependencies.gtk]
version = "0.8"
features = ["v3_22"]

[dependencies.gio]
version = "0.8"
features = ["v2_50"]
