[package]
name = "hawalaq"
version = "0.1.0"
authors = ["Agus Susilo <smartgdi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.12.0"
clap = "2.33.0"
serde = { version="1.0.101", features= ["derive"] }
serde_json = "1.0.41"
actix-web = "1.0"
log = "0.4.8"
async-std = "1.4.0"