[package]
name = "playground"
version = "0.1.0"
authors = ["susilo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "0.11"
lazy_static = "1.0"
serde_json = "1.0"
redis = "0.12.0"
diesel = { version = "1.0.0", features = ["mysql"] }
dotenv = "0.9.0"
actix-web = "1.0.7"
actix = "0.8.3"
actix-web-actors = "1.0.2"
mysql = "16.1.0"
chrono = "0.4.9"
turtle = "^1.0.0-rc.2"