[package]
name = "upgrad_chat"
version = "0.1.0"
authors = ["Agus Susilo <smartgdi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
listenfd = "0.3"
diesel = { version = "1.4.2", features = ["mysql", "chrono", "serde_json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.14.1"